java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting6/SameFieldNameErrorOnSecond.java
class Test {
  int i;
  int <error descr="Variable 'i' is already defined in the scope">i</error>;
}